# calculator-mcp-server

./: pyproject.toml  wsgi.py
.aitk/: mcp.json
src/: __init__.py  server.py
